# whisper-server

./: .env.example  .envrc  .gitignore  AGENTS.md  Makefile  docker-compose.yml  pyproject.toml
docs/: cli-streaming.md  http_api.md
docs/plans/: 2026-02-03-cli-streaming-pcm-ring-buffer.md  2026-02-03-cli-streaming-runtime-tests.md  2026-02-03-cli-streaming-windowed-asr.md  2026-02-03-epic-104-pcm-only.md  2026-02-03-issue-1-windowing-design.md  (+5 more)
init/: 001_extensions.sql
src/: __init__.py
tests/: test_asr_chunking.py  test_asr_conditioning.py  test_asr_options.py  test_asr_prompting.py  test_asr_quality.py  test_asr_silence.py  test_asr_stream.py  test_asr_streaming_commit.py  test_asr_streaming_input.py  test_asr_subproc.py  test_asr_waveform_chunking.py  test_asr_windowing.py  test_audio_inspection.py  test_audio_inspection_removed.py  test_audio_utils.py  test_cli_diarize.py  test_cli_frames.py  test_cli_removed.py  test_cli_streaming_runtime.py  test_cli_streaming_window.py  test_corrector_editor.py  test_corrector_http.py  test_corrector_pipeline.py  test_corrector_tagger.py  test_diarize_pipeline.py  test_ffmpeg_strings.py  test_http_transcribe_pcm.py  test_http_transcribe_pcm_windowing.py  test_http_transcribe_routes.py  test_kb_utils.py  test_keyterms_eval.py  test_memwatch.py  test_polish_abeja.py  test_polish_llm_cache.py  test_polish_llm_client.py  test_polish_llm_endpoint.py  test_polish_segmentation.py  test_vad.py  test_vad_fusion.py  test_video_frame_sampler.py  (+1 more)
tools/: __init__.py  eval_keyterms.md  eval_keyterms.py  eval_keyterms.sample.jsonl
(+81 files in other folders)
