[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.120.0",
    "ginza==5.2.0",
    "ja-ginza==5.2.0",
    "mlx-whisper==0.4.3",
    "pyannote-audio==4.0.1",
    "pydantic==2.12.3",
    "python-multipart==0.0.20",
    "soundfile==0.13.1",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchcodec==0.8.0",
    "opencv-python-headless==4.10.0.84",
    "uvicorn==0.38.0",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]
