[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.120.0",
    "pydantic==2.12.3",
    "python-multipart==0.0.20",
    "uvicorn==0.38.0",
    "httpx>=0.28.1",
    "numpy>=1.26",
    "mlx-whisper==0.4.3",
    "mlx>=0.29.3",
    "psutil>=5.9.0",
]
